--- a/magnolia-module-store-client/src/main/resources/info/magnolia/module/storeclient/pages/AllModulesListPage.html
+++ b/magnolia-module-store-client/src/main/resources/info/magnolia/module/storeclient/pages/AllModulesListPage.html
@@ -17,8 +17,7 @@
           if(agreed){
               loadModules();
           } else {
-              elem = document.getElementById('infoAgreement');
-              elem.style.display = '';
+              document.getElementById('infoAgreement').style.display='';
           }
       }
       function setAnswer(answer){
@@ -33,8 +32,7 @@
       function loadModules(){
           document.getElementById('infoAgreement').style.display='none';
           document.getElementById('loading').style.display = '';
-          setTimeout('', 1000);
-          document.getElementById('loadModulesForm').submit();
+          setTimeout("document.getElementById('loadModulesForm').submit()", 1000);
       }
       function setCookie(cookieName,value,expiredays){
         var exdate=new Date();
