increased space between buttons for better usability
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33016 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-store-client/src/main/resources/info/magnolia/module/storeclient/pages/AllModulesListPage.html
+++ b/magnolia-module-store-client/src/main/resources/info/magnolia/module/storeclient/pages/AllModulesListPage.html
@@ -63,7 +63,7 @@
     <div id ="infoAgreement" style="display: none; width: 400px; margin: 50px auto;">
       <h3 style="border: none">The Magnolia Store Module needs to submit some information about your installed modules to an external server. If you agree, a cookie will be saved in your browser to store your response. Do you wish to continue? </h3>
        <input  name="yes" id="yes" type="button" value="Yes, continue" onclick="setAnswer(this); return false;" class="mgnlControlButton"/>
-       <input  name="no" id="no" type="button" value="No, thanks" onclick="setAnswer(this); return false;" class="mgnlControlButton"/>
+       <input  name="no" id="no" type="button" value="No, thanks" onclick="setAnswer(this); return false;" class="mgnlControlButton" style="margin-left:10px;"/>
     </div>
     <div id ="loading" style="display: none; width: 400px; margin: 50px auto; text-align: center;">
       <h2>Contacting server...</h2>
