MAGNOLIA-3149: removed border around page and bold notices. Made white background.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33027 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -19,7 +19,7 @@
         <h1>You have successfully installed Magnolia!</h1>
     </div>
     <div id="content">
-      <p><strong>Next step: Install templates to define the look &amp; feel and the functionality of your site.</strong></p>
+      <p style="padding-left:10px"><strong>Next step:</strong> Install templates to define the look &amp; feel and the functionality of your site.</p>
 
       <div class="options">
         <div class="option" id="stk">
@@ -46,7 +46,7 @@
         <br style="clear: both;"/>
       </div>
 
-      <p><strong>For more information, please see the <a href="http://documentation.magnolia-cms.com/" target="_top" >Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</strong></p>
+      <p style="padding-left:10px">For more information, please see the <a href="http://documentation.magnolia-cms.com/" target="_top" >Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
     </div>
 </div>
 
