--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
@@ -37,7 +37,7 @@ function sendCommand(formName, commandName) {
           </table>
           </form>
           [#else]
-           Folder is empty, check property magnolia.logs.dir is definded and points to the logs folder
+           Folder is empty, check property magnolia.logs.dir is defined and points to the logs folder
           [/#if]
         </div>
     </td>
