MAGNOLIA-3194 css clip:rect() values have to be comma-separated
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@34299 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControlContent.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControlContent.html
@@ -3,7 +3,7 @@
         .${this.name}CssClassColumn${column_index}{
             position:absolute;
             left:0px;
-            clip:rect(0 0 0 0);
+            clip:rect(0, 0, 0, 0);
             cursor:default;
             padding-left:8px;
         }
