--- a/magnolia-module-fckeditor/src/main/resources/mgnl-resources/fckeditor/editor/fckeditor.html
+++ b/magnolia-module-fckeditor/src/main/resources/mgnl-resources/fckeditor/editor/fckeditor.html
@@ -258,6 +258,13 @@ function WaitForActive( editorInstance, newStatus )
 
 		FCK.SetStatus( FCK_STATUS_COMPLETE ) ;
 
+		//This is a workaround for webkit and opera browsers which automatically add a &nbsp; to an empty <p> element (created by FCK editor under the hood).
+		//See http://jira.magnolia-cms.com/browse/MAGNOLIA-3159.
+		if ((FCKBrowserInfo.IsSafari || FCKBrowserInfo.IsOpera) && FCK.StartupValue=='&nbsp;')
+		{
+			FCK.EditingArea.Document.body.innerHTML = ''
+		}
+
 		// Call the special "FCKeditor_OnComplete" function that should be present in
 		// the HTML page where the editor is located.
 		if ( typeof( window.parent.FCKeditor_OnComplete ) == 'function' )
@@ -287,7 +294,6 @@ if ( FCKBrowserInfo.IsGecko && !FCKBrowserInfo.IsOpera )
 		}
 	}
 }
-
 	</script>
 </head>
 <body>
