MAGNOLIA-3159: added semicolon for the sake of syntax consistency.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@34354 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-fckeditor/src/main/resources/mgnl-resources/fckeditor/editor/fckeditor.html
+++ b/magnolia-module-fckeditor/src/main/resources/mgnl-resources/fckeditor/editor/fckeditor.html
@@ -262,7 +262,7 @@ function WaitForActive( editorInstance, newStatus )
 		//See http://jira.magnolia-cms.com/browse/MAGNOLIA-3159.
 		if ((FCKBrowserInfo.IsSafari || FCKBrowserInfo.IsOpera) && FCK.StartupValue=='&nbsp;')
 		{
-			FCK.EditingArea.Document.body.innerHTML = ''
+			FCK.EditingArea.Document.body.innerHTML = '' ;
 		}
 
 		// Call the special "FCKeditor_OnComplete" function that should be present in
