fixed path to css and js
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35001 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/Magnolia.html
+++ b/magnolia-empty-webapp/src/main/webapp/Magnolia.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Magnolia CMS App</title>
-<script language='javascript' src='../docroot/resources/flash/swfobject.js'></script>
-<link rel="stylesheet" type="text/css" href="../docroot/resources/css/gxt-all.css" />
+<script language='javascript' src='/.resources/genuinecentral/flash/swfobject.js'></script>
+<link rel="stylesheet" type="text/css" href="/.resources/genuinecentral/css/gxt-all.css" />
 
 </head>
 <body id="mgnltreegrid" style="overflow: hidden">
