--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
@@ -44,10 +44,10 @@
       </div>
     </div>
     <div id="footer">
-      &copy; Copyright 2003-2009
+      &copy; Copyright 2003-2010
       <a href="http://www.magnolia-cms.com" id="externallink">Magnolia International Ltd.</a>
        -
-      Maiengasse 30, 4056 Basel, Switzerland
+      St. Johanns-Vorstadt 38, 4056 Basel, Switzerland
        <br/>
       Tel +41 61 228 9000 (9AM-5PM GMT+1)
        -
