--- a/magnolia-admin-central/src/main/resources/mgnl-resources/Magnolia.html
+++ b/magnolia-admin-central/src/main/resources/mgnl-resources/Magnolia.html
@@ -23,7 +23,9 @@
 </head>
 <body id="mgnltreegrid" style="overflow: hidden">
 <iframe src="javascript:''" id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
-<script type="text/javascript" language="javascript" src="info.magnolia.module.genuinecentral.AdminCentral/info.magnolia.module.genuinecentral.AdminCentral.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="../info.magnolia.module.wcm.WCM/info.magnolia.module.wcm.WCM.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="../info.magnolia.module.genuinecentral.AdminCentral/info.magnolia.module.genuinecentral.AdminCentral.nocache.js"></script>
+<script type="text/javascript" language="javascript" src="../info.magnolia.module.webapp.AllTogetherNow/info.magnolia.module.webapp.AllTogetherNow.nocache.js"></script>
 
 </body>
 </html>
