--- a/magnolia-taglib-cms/src/main/resources/info/magnolia/cms/taglibs/EditBar.html
+++ b/magnolia-taglib-cms/src/main/resources/info/magnolia/cms/taglibs/EditBar.html
@@ -1,1 +1,1 @@
-<div id="editBar1" class="editBar" data-uuid="${this.content.@uuid}"></div>
+<div class="editBar" data-uuid="${this.content.@uuid}" style="height: 25px;"></div>
