move the style to the css
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@37233 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-taglib-cms/src/main/resources/info/magnolia/cms/taglibs/EditBar.html
+++ b/magnolia-taglib-cms/src/main/resources/info/magnolia/cms/taglibs/EditBar.html
@@ -1,1 +1,1 @@
-<div class="editBar" data-uuid="${this.content.@uuid}" style="height: 25px;"></div>
+<div class="editBar" data-uuid="${this.content.@uuid}"></div>
