MAGNOLIA-3318 Provide hook for adding diff/compare functionality
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@37807 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
@@ -6,5 +6,5 @@
 
 <script type="text/javascript">
     // create the list and set the function called if the user klicks show
-    mgnlVersionsList = new mgnl.admininterface.VersionsList(${this.onShowFunction});
+    mgnlVersionsList = new mgnl.admininterface.VersionsList(${this.onShowFunction}, ${this.onDiffFunction});
 </script>
