--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
@@ -7,4 +7,6 @@
 <script type="text/javascript">
     // create the list and set the function called if the user klicks show
     mgnlVersionsList = new mgnl.admininterface.VersionsList(${this.onShowFunction}, ${this.onDiffFunction});
+
+    ${this.jsExecutedAfterSaving!}
 </script>
