MAGNOLIA-3363: the js constructor arguments can get extended
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38788 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControl.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControl.html
@@ -11,7 +11,7 @@
     var ${this.name}Items = new Object;
 
     MgnlDHTMLUtil.addOnLoad(function(){
-        ${this.name} = new ${renderer.javaScriptClass}('${this.name}', document.mgnlForm);
+        ${this.name} = new ${renderer.javaScriptClass}(${renderer.getConstructorArguments(this)});
         // add the columns
         [#list this.children as column]
             new mgnl.controls.ListColumn(
@@ -29,7 +29,7 @@
     MgnlDHTMLUtil.addOnResize(function(){${this.name}.resize();});
 </script>
 
-<div style="position:relative">
+<div id="${this.name}" style="position:relative">
     [#assign style = ""]
 
     [#if this.groupableFields?has_content || this.sortableFields?has_content]
