* MAGNOLIA-2939 removed "temp" page on update/install screens - now always redirect to /.magnolia/installer * added favicon.ico to mappings of the resources servlet during install * MAGNOLIA-3383 update/install screens are now smarter and can use proper wording depending on the delta types (updates, installs or both)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39084 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.listTasks.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.listTasks.html
@@ -1,11 +1,12 @@
 [#include "ModuleManagerWebUI.header.html" /]
 
 <div id="actions">
-  <a href="${contextPath}${installerPath}/start" id="buttonStart" class="button">Start install/update...</a>
+  <a href="${contextPath}${installerPath}/start" id="buttonStart" class="button">Start ${status.getDeltaTypesDescription(['install', 'update', 'install/update'])} ...</a>
 </div>
 
 <div id="content">
-<p class="status">The following modules will be updated/installed:</p>
+<h2>Magnolia modules need to be ${status.getDeltaTypesDescription(['installed', 'updated', 'installed or updated'])}.</h2>
+<p class="status">The following modules will be ${status.getDeltaTypesDescription(['installed', 'updated', 'installed or updated'])}:</p>
 [#list status.list as moduleStatus]
 <div class="module">
 <h3>${moduleStatus.module?cap_first}</h3>
