--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
@@ -15,6 +15,8 @@
 </div>
 [/#list]
 [/#macro]
+
+[#assign title="Magnolia ${status.getDeltaTypesDescription(['installation', 'update', 'installation and update'])} ..."]
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
@@ -24,7 +26,7 @@
     <script type="text/javascript">
 [#include "ModuleManagerWebUI.js" /]
     </script>
-    <title>Magnolia install/update ...</title>
+    <title>${title}</title>
 </head>
 <body>
 <img src="${contextPath}/.resources/images/moduleManagerUI/magnoliaLogo.gif"/>
@@ -32,5 +34,5 @@
 <div id="page">
 <div id="header">
 <img src="${contextPath}/.resources/images/moduleManagerUI/box_software.gif" id="softwareIcon"/>
-<h1>Magnolia install/update ...</h1>
+<h1>${title}</h1>
 </div>
