--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -107,7 +107,7 @@
     </div>
     <!-- Scrolled content like the about or other included pages -->
     <div id="mgnlAdminCentralScrolledContentDiv" class="mgnlAdminCentralContentDiv">
-      <iframe id="mgnlAdminCentralScrolledContentIFrame" src="" style="border: none; width:100%; height:100%"
+      <iframe id="mgnlAdminCentralScrolledContentIFrame" src="${this.request.contextPath}/.resources/admin-images/magnoliaLogo.gif" style="border: none; width:100%; height:100%"
         frameborder="0">
       </iframe>
     </div>
