MAGNOLIA-3387: improved installation instructions and welcome message.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39256 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -16,37 +16,56 @@
 <div class="page">
     <div id="header">
         <img src="${contextPath}/.resources/admin-images/signpost.gif" id="signpost" alt=""/>
-        <h1>You have successfully installed Magnolia!</h1>
+        <h1>You are nearly there!</h1>
     </div>
     <div id="content">
-      <p style="padding-left:10px"><strong>Next step:</strong> Install templates to define the look &amp; feel and the functionality of your site.</p>
+      <h2>Now install some templates</h2>
+      <p style="padding-left:10px">
+      	Templates are skeletal web pages (or sections of web pages) used to display content. Since you typically will want to
+      	publish content on the web - Magnolia is actually used in many different ways -, you should now install or define
+      	some page and paragraph templates.
+      </p>
+	  <p style="padding-left:10px">
+      	We highly recommend to use our best practice, state of the art templates provided by the Supersonic templating bundle.
+      	These have quickly become the standard way to build highly customized, standards compliant and accessible web
+      	sites using Magnolia that look good and work perfectly across multiple platforms and devices. Alternatively, you can
+      	start building your own templates now.
+      </p>
 
       <div class="options">
         <div class="option" id="stk">
             <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo" alt=""/>
-            <h3>Install the Supersonic Templating Bundle</h3>
-            <p>This download provides you with a production-ready foundation to build your own websites.
-               It is the fastest and most standardized approach to building custom websites.</p>
+            <h3>Install the Supersonic templating bundle</h3>
+            <p>
+              This module provides you with a production-ready, highly customizable foundation upon which you can quickly
+              build your own web sites.
+            </p>
             <ul class="links">
-              <li><a href="http://stk.magnolia-cms.com/" target="_top" >Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
+              <li><a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_top" >Easy installation instructions, if you've installed the Magnolia bundle</a>&nbsp;<a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
+              <li><a href="http://documentation.magnolia-cms.com/modules/standard-templating-kit.html" target="_top" >Installation instructions, if you've installed Magnolia by not using the bundle</a>&nbsp;<a href="http://documentation.magnolia-cms.com/modules/standard-templating-kit.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
+              <li><a href="http://stk.magnolia-cms.com/" target="_top" >More on Supersonic templating and the Standard Templating Kit (STK)</a>&nbsp;<a href="http://stk.magnolia-cms.com/" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
             </ul>
         </div>
 
         <div class="option" id="templates">
             <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo" alt=""/>
-            <h3>Learn How to Build Your Own Templates</h3>
-            <p>To learn more about creating your own custom templates, visit our documentation homepage.</p>
+            <h3>Learn how to build your own templates</h3>
+            <p>
+              Visit our documentation pages to learn how to build and extend paragraph and page templates using either
+              basic templating or the Standard Templating Kit (STK).
+            </p>
             <ul class="links">
-              <li><a href="http://templating.magnolia-cms.com" target="_top" >Learn more</a> (<a href="http://templating.magnolia-cms.com" target="_blank">open in new window</a>)</li>
+              <li><a href="http://documentation.magnolia-cms.com/templating/stk.html" target="_top" >How to build templates using STK</a>&nbsp;<a href="http://documentation.magnolia-cms.com/templating/stk.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
+              <li><a href="http://documentation.magnolia-cms.com/templating/introduction.html" target="_top" >How to build templates using basic templating</a>&nbsp;<a href="http://documentation.magnolia-cms.com/templating/introduction.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
               [#if !this.admin]
-                <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
+                <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a>&nbsp;<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
               [/#if]
             </ul>
         </div>
         <br style="clear: both;"/>
       </div>
 
-      <p style="padding-left:10px">For more information, please see the <a href="http://documentation.magnolia-cms.com/" target="_top" >Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
+      <p style="padding-left:10px">This message will disappear as soon as the first template is available for your site.</p>
     </div>
 </div>
 
