--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -20,13 +20,13 @@
     </div>
     <div id="content">
       <h2>Now install some templates</h2>
-      <p style="padding-left:10px">
-      	Templates are skeletal web pages (or sections of web pages) used to display content. Since you typically will want to
+      <p>
+      	<b>Templates are skeletal web pages</b> (or sections of web pages) used to display content. Since you typically will want to
       	publish content on the web - Magnolia is actually used in many different ways -, you should now install or define
       	some page and paragraph templates.
       </p>
-	  <p style="padding-left:10px">
-      	We highly recommend to use our best practice, state of the art templates provided by the Supersonic templating bundle.
+	  <p>
+      	We highly recommend to use our best practice, state of the art templates provided by the <b>Supersonic templating bundle</b>.
       	These have quickly become the standard way to build highly customized, standards compliant and accessible web
       	sites using Magnolia that look good and work perfectly across multiple platforms and devices. Alternatively, you can
       	start building your own templates now.
@@ -41,8 +41,7 @@
               build your own web sites.
             </p>
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_top" >Easy installation instructions, if you've installed the Magnolia bundle</a>&nbsp;<a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
-              <li><a href="http://documentation.magnolia-cms.com/modules/standard-templating-kit.html" target="_top" >Installation instructions, if you've installed Magnolia by not using the bundle</a>&nbsp;<a href="http://documentation.magnolia-cms.com/modules/standard-templating-kit.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
+              <li><a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_top" >How to download and install Supersonic templating</a>&nbsp;<a href="http://documentation.magnolia-cms.com/administration/installation/templating-bundle.html" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
               <li><a href="http://stk.magnolia-cms.com/" target="_top" >More on Supersonic templating and the Standard Templating Kit (STK)</a>&nbsp;<a href="http://stk.magnolia-cms.com/" target="_blank"><img src="${contextPath}/.resources/icons/16/open_in_new_window.gif" alt="open in new window" /></a></li>
             </ul>
         </div>
@@ -62,10 +61,10 @@
               [/#if]
             </ul>
         </div>
-        <br style="clear: both;"/>
       </div>
+	  <br style="clear: both;"/>
 
-      <p style="padding-left:10px">This message will disappear as soon as the first template is available for your site.</p>
+      <p>This message will disappear as soon as the first template is available for your site.</p>
     </div>
 </div>
 
