MAGNOLIA-3383 * moved misplaced period * while we're at it, the "in progress" screen could also say what's in progress (installation, updates or both)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39283 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.inProgress.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.inProgress.html
@@ -3,7 +3,7 @@
     setTimeout("window.location.replace('${contextPath}${installerPath}/status')", 3000);
 </script>
 <div id="content">
-  <h2>In progress ... </h2>
+  <h2>${status.getDeltaTypesDescription(['Installation', 'Update', 'Installation and updates'])} in progress ... </h2>
   [@progress /]
   [@contextMessages /]
 </div>
