--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.installDone.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.installDone.html
@@ -4,7 +4,7 @@
 </div>
 
 <div id="content">
-  <h2>${status.getDeltaTypesDescription(['Installation', 'Update', 'Installation and updates'])}. done</h2>    
+  <h2>${status.getDeltaTypesDescription(['Installation', 'Update', 'Installation and updates'])} done.</h2>    
   [@progress /]
   [@contextMessages /]
 </div>
