JCR based security. As of this commit, Magnolia no longer checks permissions on nodes, but delegates this operation to the JCR layer itself. Work in progress.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43263 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -77,9 +77,9 @@
       <form action="" method="post" style="padding: 0; margin: 0;">
         <div>
         <input type="hidden" name="mgnlLogout" value="true"/>
-        ${this.messages.get("central.user")}: 
-        [#if this.userNode?exists]
-          <span onclick="mgnlOpenDialog('${this.userNode.@handle}','','','','users','.magnolia/dialogs/userpreferences.html')" style=" font-size: 11px; color: black; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0;" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';">${this.user.name}</span>
+        ${this.messages.get("central.user")}:
+        [#if this.user.path?exists]
+          <span onclick="mgnlOpenDialog('${this.user.path}','','','','users','.magnolia/dialogs/userpreferences.html')" style=" font-size: 11px; color: black; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0;" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';">${this.user.name}</span>
         [#else]
           ${this.user.name}
         [/#if]
