MAGNOLIA-3589 Escapes inserted values to avoid saving scripts. Port of r43791.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43797 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/JCRUtilsPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/JCRUtilsPage.html
@@ -53,7 +53,7 @@
            </div>
            <div class="formelement">
               <label for="repository">Result ItemType</label>
-              <input type="text" name="itemType" value="${this.itemType}" />
+              <input type="text" name="itemType" value="${this.itemType?js_string}" />
             </div>
             <div>
                    <textarea name="statement" rows="4" cols="40" style="width:380px;height:200px">${this.statement}</textarea>
