--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
@@ -1,5 +1,5 @@
-<input type="hidden" name="repository" value="${this.repository}"/>
-<input type="hidden" name="path" value="${this.path}"/>
+<input type="hidden" name="repository" value="${this.repository?js_string}"/>
+<input type="hidden" name="path" value="${this.path?js_string}"/>
 
 <!-- set if the command is restore -->
 <input type="hidden" name="versionLabel" value=""/>
