--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/LogViewerPage.html
@@ -49,9 +49,9 @@ function sendCommand(formName, commandName) {
    <div class="formelement" style="padding-left: 400px; margin: 0;position:absolute;">
      Page ${this.pageNumber} of ${this.totalPages}&nbsp;&nbsp;&nbsp;&nbsp;
 
-          <input type="hidden" name="currentPosition" value="${this.currentPosition?c}" />
-          <input type="hidden" name="fileName"  value="${this.fileName}" />
-          <input type="hidden" name="fileSizeInLines"  value="${this.fileSizeInLines?c}" />
+          <input type="hidden" name="currentPosition" value="${this.currentPosition?c?js_string}" />
+          <input type="hidden" name="fileName"  value="${this.fileName?js_string}" />
+          <input type="hidden" name="fileSizeInLines"  value="${this.fileSizeInLines?c?js_string}" />
           <input type="hidden" name="command" value="begin" />
           <input type="button" value="&lt;&lt;" onclick="sendCommand('pagination','begin');" class="mgnlControlButton" />
           <input type="button" value="&lt;" onclick="sendCommand('pagination','previous');" class="mgnlControlButton" />
