MAGNOLIA-3589 Escape by ?html. Port of r44016.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44018 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/VersionsList.html
@@ -1,5 +1,5 @@
-<input type="hidden" name="repository" value="${this.repository?js_string}"/>
-<input type="hidden" name="path" value="${this.path?js_string}"/>
+<input type="hidden" name="repository" value="${this.repository?html}"/>
+<input type="hidden" name="path" value="${this.path?html}"/>
 
 <!-- set if the command is restore -->
 <input type="hidden" name="versionLabel" value=""/>
