--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControl.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/ListControl.html
@@ -1,8 +1,8 @@
 <!-- form for sorting and grouping -->
-<input type="hidden" name="sortBy" value="${this.sortBy?js_string}"/>
-<input type="hidden" name="sortByOrder" value="${this.sortByOrder?js_string}"/>
-<input type="hidden" name="groupBy" value="${this.groupBy?js_string}"/>
-<input type="hidden" name="groupByOrder" value="${this.groupByOrder?js_string}"/>
+<input type="hidden" name="sortBy" value="${this.sortBy?html}"/>
+<input type="hidden" name="sortByOrder" value="${this.sortByOrder?html}"/>
+<input type="hidden" name="groupBy" value="${this.groupBy?html}"/>
+<input type="hidden" name="groupByOrder" value="${this.groupByOrder?html}"/>
 
 <script type="text/javascript">
     var ${this.name};
