MAGNOLIA-3680 Provide user info about permission error. Port of r45868
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45869 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ImportPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ImportPage.html
@@ -6,6 +6,10 @@
     <link href="${this.request.contextPath}/.resources/admin-css/admin-all.css" type="text/css" rel="stylesheet" />
   </head>
   <body id="mgnl" class="mgnlBgLight mgnlImportExport">
+    [#if message?exists]
+      <pre>${message}</pre>
+      <hr />
+    [/#if]
     <h2>${this.messages.get("importexport.import")}</h2>
     <form method="post" action="" enctype="multipart/form-data">
       <div class="formelement">
