--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ExportPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ExportPage.html
@@ -6,6 +6,10 @@
     <link href="${this.request.contextPath}/.resources/admin-css/admin-all.css" type="text/css" rel="stylesheet" />
   </head>
   <body id="mgnl" class="mgnlBgLight mgnlImportExport">
+    [#if message?exists]
+      <pre>${message}</pre>
+      <hr />
+    [/#if]
     <h2>${this.messages.get("importexport.export")}</h2>
     <form method="get" action="">
       <div class="formelement">
